kubernetes/infra/configs/kyverno/tests/disallow-latest-tag/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-latest-tag
policies:
  - ../../cluster-policies/disallow-latest-tag.yaml
resources:
  - resources.yaml
results:
  - policy: disallow-latest-tag
    rule: require-image-volume-digest
    kind: Pod
    resources:
      - monitoring/image-volume-digest
      - monitoring/no-image-volume
    result: pass
  - policy: disallow-latest-tag
    rule: require-image-volume-digest
    kind: Pod
    resources:
      - monitoring/image-volume-tag-only
    result: fail
  - policy: disallow-latest-tag
    rule: forbid-latest-tag
    kind: Pod
    resources:
      - monitoring/image-volume-digest
    result: pass
